--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ main {
   grid-template-columns: 1fr; /* Sadece bir sütun kullanıyoruz */
   gap: 0; /* Gridler arasındaki boşluğu kaldırıyoruz */
   width: 100%;
-  height: 60vh; /* Sayfa yüksekliğini kısaltıyoruz, burada 60vh'yi seçtik */
+  height: 60vh; /* Sayfa yüksekliğini kısaltıyoruz */
   margin: 0;
 }
 
@@ -107,26 +107,27 @@ main {
   text-decoration: underline;
 }
 
-/* Sosyal Medya Butonları */
-.social-media-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
-}
-
-.social-button {
-  text-decoration: none;
-  padding: 10px 20px;
-  font-size: 1.2em;
-  border-radius: 5px;
+/* Geri Sayım (Countdown) */
+.countdown-container {
+  text-align: center;
+  margin-top: 20px;
   color: white;
-  background-color: #333;
-  transition: background-color 0.3s ease;
 }
 
-.social-button:hover {
-  background-color: #007BFF;
+.countdown-container h3 {
+  font-size: 2em;
+  font-weight: 600;
+}
+
+#countdown {
+  font-size: 2.5em;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #ff5722;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 20px;
+  display: inline-block;
+  border-radius: 10px;
 }
 
 /* Footer */
@@ -146,10 +147,5 @@ footer {
 
   .image-container {
     height: 300px;
-  }
-
-  .social-media-buttons {
-    flex-direction: column;
-    gap: 10px;
   }
 }
