--- a/styles.css
+++ b/styles.css
@@ -105,24 +105,25 @@ main {
   color: white;
   padding: 20px;
   width: 80%;
-  font-size: 0.9em; /* Yazı boyutunu küçültüyoruz */
+  font-size: 0.8em; /* İletişim yazı boyutunu küçültüyoruz */
 }
 
 .contact-container h2 {
-  font-size: 2.2em;
+  font-size: 1.8em; /* İletişim başlığını küçültüyoruz */
   font-weight: 600;
-  margin-bottom: 15px; /* İletişim başlığı ile paragraf arasına boşluk ekliyoruz */
+  margin-bottom: 10px; /* İletişim başlığı ile paragraf arasına boşluk ekliyoruz */
 }
 
 .contact-container p {
-  font-size: 1em;
+  font-size: 1.1em; /* Mail adresinin boyutunu büyütüyoruz */
   line-height: 1.6;
+  color: #333; /* Koyu gri renk ile mail adresini belirgin hale getiriyoruz */
 }
 
-/* İletişim kısmı bağlantısı */
 .contact-container a {
-  color: #007BFF;
+  color: #333; /* Mail adresi için renk değiştirdik */
   text-decoration: none;
+  font-weight: 500; /* Mail adresini daha belirgin hale getiriyoruz */
 }
 
 .contact-container a:hover {
