--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header {
 header .logo img {
   width: 250px;
   height: auto;
-  max-width: 100%; /* Mobil uyumluluk */
+  max-width: 100%;
 }
 
 /* Ana İçerik */
@@ -56,7 +56,7 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.6);
 }
 
 /* Metin Kutusu */
@@ -84,7 +84,7 @@ main {
 /* İletişim */
 .contact-container {
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -94,8 +94,7 @@ main {
 .contact-container h2 {
   font-size: 1em;
   font-weight: 600;
-  margin-bottom: 5px; /* Metinlerin çakışmasını önler */
-  display: block;
+  margin-bottom: 5px;
 }
 
 .contact-container p,
